# sniplets-rs

./: .gitignore  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: checks.yaml  publish.yaml
src/: lib.rs  path.rs  quick_xml.rs
