[package]
name = "sniplets"
version = "0.1.0"
edition = "2024"
authors = ["Serey Vilgelm <sergey@vilgelm.com>"]
description = "A collection of handy utility functions for Rust projects."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sv-tools/sniplets-rs"
repository = "https://github.com/sv-tools/sniplets-rs.git"
readme = "README.md"
keywords = ["utilities", "gist", "snippets"]
categories = ["development-tools"]
include = [
  "src",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
